# micro-auth

./: .envexample  .gitignore  README.md  pyproject.toml  settings.py
api/: exception_handler.py  handlers.py  lifespans.py  main.py
api/routers/: __init__.py  auth.py  roles.py  user.py  user_role.py
core/di/providers/: app.py
core/repository/: repository.py
core/service/: exception.py
database/: db.py
database/tables/: __init__.py  base_mixin.py  role.py  user.py
di/: __init__.py
di/providers/: app.py
logger/: config.yaml  handlers.py  setup.py  utils.py
model/: auth.py  jwt.py  role.py  user.py  user_role.py
repository/: role.py  user.py  user_role.py
service/: auth.py  exceptions.py  role.py  user.py  user_role.py
service/base/: base_service.py
service/exceptions/: base.py
service/user_role/: exceptions.py  role.py  user_registration.py
tests/: test_user_registration.py
tests/test_api/: test_role_router.py
tests/test_repos/: test_role_repo.py  test_user_repo.py
tests/test_services/: test_user_service.py
utils/: jwt_util.py  password_utils.py
